syntax = "proto3";

option go_package = "orders/common/pb";

service Account {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetNewTokens(GetNewTokensRequest) returns (GetNewTokensResponse);
  rpc UpdateById(UpdateUserRequest) returns (UpdateUserResponse);
}

message Offering{
 int64 Id = 1;
 string Status = 2;
 string Title = 3;
 string Description = 4;
 int32 Price = 5;
 int64 ContractorId = 6;
}


message PublicUserProfile {
  int64 Id = 1;
  int64 Email = 2;
  string Name = 3;
  string Role = 4;
  float Rating = 5;
  int32 NumberCompletedOrders = 6;
  repeated Offering Offerings = 7;
}

message LoginRequest{
  string Email = 1;
  string Password = 2;
}

message LoginResponse{
  string AccessToken = 1;
  string RefreshToken = 2;
  int64 Id = 3;
}

message RegisterRequest{
  string Email = 1;
  string Password = 2;
  string Name = 3;
}

message RegisterResponse{
  string AccessToken = 1;
  string RefreshToken = 2;
  int64 Id = 3;
}

message GetNewTokensRequest{
  string refreshToken = 1;
}

message GetNewTokensResponse{
  string accessToken = 1;
  string refreshToken = 2;
}

message UpdateUserRequest{
  int64 id = 1;
  optional string Name = 2;
  optional string Email = 3;
  optional string Password = 4;
  optional string NewPassword = 5;
}
message UpdateUserResponse {
  bool isSuccess = 1;
}